--- a/templates/mayura/mayura.css
+++ b/templates/mayura/mayura.css
@@ -33,7 +33,18 @@
   padding-top: 20px;
 }
 
-.mayura .section[data-id="get-in-touch"] .cards.related-search .benefit-cards {
+.mayura .cards.related-search .benefit-cards .cards-card-body h3 a:hover {
+color: var(--dark-red-color);
+}
+
+.mayura .section[data-id="get-in-touch"] .cards.related-search {
+
+  .grid-cards {
+    grid-template-columns: repeat(3, 1fr) !important;
+    gap: 4px;
+  }
+
+.benefit-cards {
   background-color: transparent;
   box-shadow: none;
 
@@ -46,11 +57,26 @@
     color: #293871;
   }
 }
+}
 
-.mayura .section[data-id="get-in-touch"] .cards.related-search .grid-cards {
-    grid-template-columns: repeat(3, 1fr) !important;
-    gap: 4px;
-  }
+.mayura .cards.important-documents li, .cards.important-documents .important-documents-card {
+  background: var(--gradient-earn-rewards);
+  box-shadow: none;
+  border: 1px var(--text-color) solid;
+}
+
+.mayura .accordion .accordion-cta.button{
+  background: var(--gradient-pewter);
+  color: var(--white);
+  width: max-content;
+  margin: var(--spacing-m) auto 0;
+  padding: 8px 20px;
+  border-radius: 40px;
+  text-decoration: none;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.5;
+}
 
   @media (width <= 900px) {
     .mayura .section[data-id="get-in-touch"] .cards.related-search .benefit-cards {
