Style explore-other-cards

--- a/blocks/cards/cards.css
+++ b/blocks/cards/cards.css
@@ -1256,6 +1256,34 @@
   margin-bottom: 0;
 }
 
+.explore-other-cards .swiper-slide {
+  flex-direction: column;
+  flex-wrap: wrap;
+  align-items: center;
+  align-content: center;
+  height: auto;
+  padding-bottom: 60px; /* Space for pagination */
+  position: relative;
+  overflow: visible;
+  background-color: transparent;
+  width: 322px;
+}
+
+.explore-other-cards .swiper-slide .cards-card-body {
+  width: 100%;
+  border-radius: 20px;
+  margin-top: -30px;
+  padding: 55px 20px 40px 20px;
+  background: linear-gradient(270deg, #332B28 0%, #514A44 21.11%, #8B837D 50.14%, #625A50 71.74%, #7A766D 90.18%, #433C32 100%);
+  z-index: -1;
+}
+
+.explore-other-cards .swiper-slide .cards-card-body h3 {
+  text-align: center;
+  font-size: 24px;
+  color: var(--white);
+}
+
 /* Swiper Navigation Buttons */
 .cards .swiper-button-next,
 .cards .swiper-button-prev {
